--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon transpile-only src/server.ts",
-    "start": "npm run build && node .dist/server.js",
+    "dev": "tsnd -r dotenv/config src/server.ts",
+    "start": "node ./dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -14,13 +14,25 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/nodemon": "^1.19.1",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-editorconfig": "^3.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.2.0",
     "nodemon": "^2.0.15",
+    "prettier": "^2.6.2",
     "sequelize-cli": "^6.4.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
