--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "tsnd -r dotenv/config src/server.ts",
-    "start": "node ./dist/server.js",
+    "start": "npm run build && node ./dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/nodemon": "^1.19.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
@@ -27,11 +28,11 @@
     "eslint-plugin-promise": "^5.2.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
-    "sequelize-cli": "^6.4.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
