--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.18.0",
     "uuidv4": "^6.2.13"
